# micro-kernels

./: CMakeLists.txt  CmakeLists.txt  README.md
bench/: bench_ring.cu
include/: micro_kernels.hpp  warp_reduce.h
include/micro_kernels/: element_wise_kernel.hpp
include/microkernels/: elementwise.cuh  microkernels.cuh  reduction.cuh
src/: reduce_kernels.cu  ring_allreduce.cu  utils.cu  warp_reduce.cpp
test/: test_warp_reduce.cu
tests/: smoke_elementwise.cu  smoke_reduction.cu
